@@ -1,4 +1,15 @@
 package br.org.apae.api.appointment.application.internal;
+import br.org.apae.api.appointment.application.interfaces.AppointmentApplicationService;
+import br.org.apae.api.appointment.domain.exceptions.AnnualRegistrationNotFound;
+import br.org.apae.api.appointment.domain.exceptions.AppointmentAlreadyCancelledException;
+import br.org.apae.api.appointment.domain.exceptions.AppointmentNotFoundException;
+import br.org.apae.api.appointment.mapper.AppointmentMapper;
+import br.org.apae.api.patient.domain.model.AnnualRegistry;
+import br.org.apae.api.patient.domain.repository.AnnualRegistryRepository;
+import br.org.apae.api.professional.domain.exceptions.HealthProfessionalNotFoundException;
+import br.org.apae.api.professional.domain.model.HealthProfessional;
+import br.org.apae.api.professional.domain.repository.HealthProfessionalRepository;
+import jakarta.transaction.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -14,15 +25,11 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import br.org.apae.api.appointment.application.interfaces.AppointmentApplicationService;
-import br.org.apae.api.appointment.domain.exceptions.AnnualRegistrationNotFound;
-import br.org.apae.api.appointment.domain.exceptions.AppointmentNotFoundException;
 import br.org.apae.api.appointment.domain.model.Appointment;
 import br.org.apae.api.appointment.domain.model.GeneratedAppointment;
 import br.org.apae.api.appointment.domain.repository.AbsenceRepository;
 import br.org.apae.api.appointment.domain.repository.AppointmentRepository;
 import br.org.apae.api.appointment.domain.repository.GeneratedAppointmentRepository;
-import br.org.apae.api.appointment.mapper.AppointmentMapper;
 import br.org.apae.api.common.dto.address.AddressResponseDTO;
 import br.org.apae.api.common.dto.appointment.request.appointment.CreateAppointmentDTO;
 import br.org.apae.api.common.dto.appointment.response.appointment.AppointmentResponseDTO;
@@ -32,20 +39,14 @@ import br.org.apae.api.common.dto.patient.response.guardian.GuardianResponseDTO;
 import br.org.apae.api.common.dto.patient.response.patient.PatientResponseDTO;
 import br.org.apae.api.patient.application.mappers.ParentMapper;
 import br.org.apae.api.patient.application.mappers.VaccineMapper;
-import br.org.apae.api.patient.domain.model.AnnualRegistry;
 import br.org.apae.api.patient.domain.model.Guardian;
 import br.org.apae.api.patient.domain.model.Parent;
 import br.org.apae.api.patient.domain.model.Patient;
 import br.org.apae.api.patient.domain.model.Vaccine;
-import br.org.apae.api.patient.domain.repository.AnnualRegistryRepository;
 import br.org.apae.api.patient.domain.repository.GuardianRepository;
 import br.org.apae.api.patient.domain.repository.ParentRepository;
 import br.org.apae.api.patient.domain.repository.PatientRepository;
-import br.org.apae.api.professional.domain.exceptions.HealthProfessionalNotFoundException;
-import br.org.apae.api.professional.domain.model.HealthProfessional;
-import br.org.apae.api.professional.domain.repository.HealthProfessionalRepository;
 import jakarta.persistence.EntityNotFoundException;
-import jakarta.transaction.Transactional;
 
 @Service
 @Transactional
@@ -128,7 +129,7 @@ public class AppointmentApplicationServiceImpl implements AppointmentApplication
         patient,
         adto,
         new GuardianResponseDTO(guardian, adto),
-        pais.stream().map(parentMapper::toResponseDTO).collect(Collectors.toList()),
+        pais.stream().map(parentMapper::toResponseDTO).toList(),
         vaccines.stream().map(vaccineMapper::toResponseDTO).collect(Collectors.toSet()), null);
 
       return mapper.toResponse(appointment, pdto);
@@ -311,7 +312,7 @@ public class AppointmentApplicationServiceImpl implements AppointmentApplication
         patient,
         adto,
         new GuardianResponseDTO(guardian, adto),
-        pais.stream().map(parentMapper::toResponseDTO).collect(Collectors.toList()),
+        pais.stream().map(parentMapper::toResponseDTO).toList(),
         vaccines.stream().map(vaccineMapper::toResponseDTO).collect(Collectors.toSet()), null);
 
       return mapper.toTodayResponseDTO(appointment, pdto);
@@ -446,6 +447,7 @@ public class AppointmentApplicationServiceImpl implements AppointmentApplication
   public GeneratedAppointmentResponseDTO cancel(UUID generatedId, String reason) {
     GeneratedAppointment appt = generatedRepo.findById(generatedId)
             .orElseThrow(() -> new IllegalArgumentException(APPOINTMENT_NOT_FOUND));
+    if (Boolean.TRUE.equals(appt.getCancelled())) throw new AppointmentAlreadyCancelledException();
     appt.setCancelled(true);
     appt.setCancellationReason(reason);
     return mapper.toGeneratedResponse(generatedRepo.save(appt));
